macOS: Deletion of more than one playlist item crashes
Crash when deleting more than one playlist item at once, by selecting multiple in the list and then pressing backspace.
Crash when deleting more than one playlist item at once, by selecting multiple in the list and then pressing backspace.
Just delete them one by one then ;p
assigned to @fkuehne and unassigned @dfuhrmann
unassigned @fkuehne
added Status::fixed label
closed
VideoLAN code repository instance