macosx: Implement deletion of multiple playlist items

Avoids crash when deleting more than one index at once.
Uses playlist_RequestDelete to handle concurrent requests from
multiple UIs.
Fixes deletion also from context menu.

closes #22367